# urfu_segmentation

./: .gitignore  Landcover.py
landcover_project/: aux_tools.py  (+1 more)
urfu_water_segmentation/: .gitignore  README.md  evaluate.py  evaluate.sh  init_venv.sh  pyproject.toml  visualization.py  visualize.sh
urfu_water_segmentation/landcover/: config_debug.py  config_landcover.py  create_dataset_split.py  dataset.py  dist_train.sh  prepare_dataset.py  train.py  train_debug.sh  train_single_gpu.sh
urfu_water_segmentation/landcover/logs/LandcoverAI_512_CrossEntropyLoss_SGD_bsize_384/: config_landcover.py  events.out.tfevents.1729422784.tesla-a101.1520425.0  last_checkpoint
urfu_water_segmentation/landcover/logs/LandcoverAI_512_CrossEntropyLoss_SGD_bsize_512/: events.out.tfevents.1729424603.tesla-a101.1522661.0  events.out.tfevents.1729426378.tesla-a101.1524799.0  last_checkpoint  scalars.json
urfu_water_segmentation/landcover/logs/Poolformer_LandcoverAI_512_CrossEntropyLoss_SGD_bsize_128/: events.out.tfevents.1729428452.tesla-a101.1528435.0  events.out.tfevents.1729428706.tesla-a101.1529242.0  events.out.tfevents.1729428898.tesla-a101.1529966.0  events.out.tfevents.1729429052.tesla-a101.1530653.0  events.out.tfevents.1729429156.tesla-a101.1531307.0  events.out.tfevents.1729471139.tesla-a101.1566321.0  events.out.tfevents.1729500699.tesla-a101.1596883.0  last_checkpoint  scalars.json
urfu_water_segmentation/landcover/logs/Poolformer_LandcoverAI_512_CrossEntropyLoss_SGD_bsize_64/: events.out.tfevents.1729429239.tesla-a101.1531928.0  last_checkpoint  scalars.json
(+23 files in other folders)
