[tool.poetry]
name = "urfu_water_segmentation"
version = "0.1.0"
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
torch = { version = "1.11.0+cu115", source = "pytorch-gpu" }
torchvision = { version = "0.12.0+cu115", source = "pytorch-gpu" } 
mmsegmentation = { path = "..", develop = true }
numpy = "^1.26"
mmcv = { url = "https://download.openmmlab.com/mmcv/dist/cu115/torch1.11.0/mmcv-2.2.0-cp39-cp39-manylinux1_x86_64.whl" }
ftfy = "^6.3.0"
regex = "^2024.9.11"
future = "^1.0.0"
tensorboard = "^2.18.0"
tensorboardx = "^2.6.2.2"
tqdm = "^4.66.5"
mmpretrain = ">=1.0.0rc7"
albumentations = "^1.4.21"
pandas = "^2.2.3"

[[tool.poetry.source]]
name = "pytorch-gpu"
url = "https://download.pytorch.org/whl/cu115"
priority = "explicit"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
